:sparkles: fix overscrolling

--- a/src/stylesheets/normalize.css
+++ b/src/stylesheets/normalize.css
@@ -1,5 +1,14 @@
 html,
 body {
-  margin: 0;
+  overflow: hidden;
   height: 100%;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+body > #frame {
+  overflow-y: auto;
+  height: 100%;
+  width: 100%;
 }
