--- a/src/stylesheets/keyframes.css
+++ b/src/stylesheets/keyframes.css
@@ -22,3 +22,22 @@
     opacity: 1;
   }
 }
+
+@keyframes ecg {
+  0% {
+    opacity: 0;
+  }
+  25% {
+    opacity: 1;
+  }
+  50% {
+    stroke-dashoffset: 2000;
+  }
+  99% {
+    opacity: 0;
+    stroke-dashoffset: 3000;
+  }
+  100% {
+    stroke-dashoffset: 1000;
+  }
+}
